# StratifyOS-fatfs

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  arm.cmake  fatfs.cmake
include/: CMakeLists.txt  fatfs.h
include/fatfs/: ff.h  ffconf.h
src/: CMakeLists.txt  diskio.c  fatfs.c  fatfs_dev.c  fatfs_dev.h  ff.c
src/option/: syscall.c
